--- a/index.html
+++ b/index.html
@@ -16,41 +16,41 @@
     </audio>
     <div class="container">
         <section class="page" id="page1">
-            <h1 class="animated-text">生日这天，<br>所有星星都落在你肩头</h1>
+            <h1 class="animated-text">生日这天，<br>所有星星都落在你肩头✨</h1>
         </section>
         <section class="page" id="page2">
-            <h1 class="animated-text">日历偷偷记下——<br>这是宇宙偏爱你的一页</h1>
+            <h1 class="animated-text">日历偷偷记下——<br>这是宇宙偏爱你的一页📅💫</h1>
         </section>
         <section class="page" id="page3">
-            <h1 class="animated-text">快递员送来晚风与月光</h1>
+            <h1 class="animated-text">快递员送来晚风与月光🌙📦</h1>
         </section>
         <section class="page" id="page4">
-            <h1 class="animated-text">乐呵呵的云朵趴在你窗前说：<br>该许愿啦</h1>
+            <h1 class="animated-text">乐呵呵的云朵趴在你窗前说：<br>该许愿啦☁️🎂✨</h1>
         </section>
         <section class="page" id="page5">
-            <h1 class="animated-text">小心拆开礼物蝴蝶结</h1>
+            <h1 class="animated-text">小心拆开礼物蝴蝶结🎁💝</h1>
         </section>
         <section class="page" id="page6">
-            <h1 class="animated-text">阮字在心跳声里变得好烫…</h1>
+            <h1 class="animated-text">阮字在心跳声里变得好烫💓🔥</h1>
         </section>
         <section class="page" id="page7">
-            <h1 class="animated-text">我猜蛋糕蜡烛听见了</h1>
+            <h1 class="animated-text">我猜蛋糕蜡烛听见了🎂🕯️</h1>
         </section>
         <section class="page" id="page8">
-            <h1 class="animated-text">喜庆的烛光跳动着，<br>像为你写的诗</h1>
+            <h1 class="animated-text">喜庆的烛光跳动着，<br>像为你写的诗🕯️📖✨</h1>
         </section>
         <section class="page" id="page9">
-            <h1 class="animated-text">欢笑定格在合照的夏天</h1>
+            <h1 class="animated-text">欢喜如星光洒落，<br>每一颗都写满了你的名字💫💌</h1>
         </section>
         <section class="page" id="page10">
-            <h1 class="animated-text">你比漫天的星星更明亮✨</h1>
+            <h1 class="animated-text">你比漫天的星星更明亮✨💖</h1>
         </section>
     </div>
     <div class="scroll-down">
     </div>
     <div id="background-effects">
         <div class="star">🌟</div>
-        <div class="heart">❤️</div>
+        <div class="heart">💖</div>
         <div class="cake">🎂</div>
     </div>
     <script src="script.js"></script>
