--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="music-prompt">
-        <p>点击页面以播放音乐 🎵</p>
+        <p>指尖轻触，听见心动 💖</p>
     </div>
     <audio id="background-music" loop autoplay>
         <source src="background-music.mp3" type="audio/mpeg">
