--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
         <section class="page" id="page10">
             <h1 class="animated-text">你比漫天的星星更明亮✨💖</h1>
         </section>
+        <section class="page" id="page11">
+            <h1 class="animated-text">君常喜乐，万事顺遂🌟</h1>
+        </section>
+        <section class="page" id="page12">
+            <h1 class="animated-text">所愿皆成，早得良职💼</h1>
+        </section>
+        <section class="page" id="page13">
+            <h1 class="animated-text">安居乐业，心之所向🏡💖</h1>
+        </section>
     </div>
     <div class="scroll-down">
     </div>
