--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <section class="page" id="page13">
             <h1 class="animated-text">安居乐业，心之所向🏡💖</h1>
         </section>
+        <section class="page" id="page14">
+            <div class="big-heart">💖</div>
+        </section>
     </div>
     <div class="scroll-down">
     </div>
